WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88288
Crash when modifying fixed-position elements in a detached frame
https://bugs.webkit.org/show_bug.cgi?id=88288
Summary
Crash when modifying fixed-position elements in a detached frame
dstockwell
Reported
2012-06-04 21:13:06 PDT
Created
attachment 145689
[details]
repro As reported at
http://code.google.com/p/chromium/issues/detail?id=130460
Attachments
repro
(265 bytes, text/html)
2012-06-04 21:13 PDT
,
dstockwell
no flags
Details
Patch
(3.48 KB, patch)
2012-06-04 21:57 PDT
,
dstockwell
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
dstockwell
Comment 1
2012-06-04 21:57:04 PDT
Created
attachment 145694
[details]
Patch
James Robinson
Comment 2
2012-06-05 10:46:30 PDT
Comment on
attachment 145694
[details]
Patch Nice! R=me
WebKit Review Bot
Comment 3
2012-06-05 11:05:45 PDT
Comment on
attachment 145694
[details]
Patch Clearing flags on attachment: 145694 Committed
r119502
: <
http://trac.webkit.org/changeset/119502
>
WebKit Review Bot
Comment 4
2012-06-05 11:06:00 PDT
All reviewed patches have been landed. Closing bug.
Andy Estes
Comment 5
2012-06-12 17:19:19 PDT
<
rdar://problem/11652470
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug