Crash when modifying fixed-position elements in a detached frame https://bugs.webkit.org/show_bug.cgi?id=88288

Patch by Douglas Stockwell <dstockwell@chromium.org> on 2012-06-05
Reviewed by James Robinson.

Source/WebCore:

Test: fast/block/positioning/fixed-position-detached-frame.html

* css/StyleResolver.cpp:
(WebCore::StyleResolver::collectMatchingRulesForList):

LayoutTests:

* fast/block/positioning/fixed-position-detached-frame-expected.txt: Added.
* fast/block/positioning/fixed-position-detached-frame.html: Added.

Canonical link: https://commits.webkit.org/106165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119502 268f45cc-cd09-0410-ab3c-d52691b4dbfc